[project]
name = "movie"
version = "0.2.2"
description = "영화진흥위원회 API 사용 => 영화순위 데이터 처리"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"  # "==3.11.*" 원래는 이렇게 되어있는데 바꿈
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true 

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[project.scripts]
mov-ping = 'movie.cli:ping' 

[project.urls]
Homepage = "https://github.com/rlaehgus97/kim_mov"
Issues = "https://github.com/rlaehgus97/kim_mov/issues"


